--- a/prototype/package.json
+++ b/prototype/package.json
@@ -24,16 +24,17 @@
     "autoprefixer": "^10.4.0",
     "cssnano": "^6.0.0",
     "eslint": "^8.57.0",
+    "playwright": "^1.54.1",
+    "playwright-core": "^1.54.1",
     "postcss": "^8.4.0",
     "postcss-custom-properties": "^13.3.0",
     "postcss-import": "^15.1.0",
     "postcss-nesting": "^12.0.0",
     "prettier": "^3.2.0",
+    "puppeteer-core": "^24.15.0",
     "vite": "^5.0.0",
-    "vite-bundle-analyzer": "^0.7.0"
-  },
-  "dependencies": {
-    "playwright": "^1.54.1"
+    "vite-bundle-analyzer": "^0.7.0",
+    "ws": "^8.18.3"
   },
   "browserslist": [
     "> 1%",
