--- a/package.json
+++ b/package.json
@@ -11,16 +11,22 @@
   "dependencies": {
     "@calcom/embed-react": "^1.5.3",
     "@clerk/nextjs": "^6.27.1",
+    "@radix-ui/react-slot": "^1.2.3",
     "@sentry/nextjs": "^9.42.0",
     "@stripe/stripe-js": "^7.6.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "convex": "^1.25.4",
     "dompurify": "^3.2.6",
+    "jsdom": "^26.1.0",
+    "lucide-react": "^0.532.0",
     "next": "^15.4.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "resend": "^4.7.0",
     "safe-compare": "^1.1.4",
     "stripe": "^18.3.0",
+    "tailwind-merge": "^3.3.1",
     "validator": "^13.15.15"
   },
   "devDependencies": {
