claude-01-[7/29 10:14AM]: modify {{filePath}} [MEDIUM:5 files]

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,12 @@ next-env.d.ts
 .artifacts/
 .claude/
 .claude-code/
+
+# playwright
+test-results/
+playwright-report/
+playwright/.cache/
+visual-snapshots/
+/test-results/
+/playwright-report/
+/playwright/.cache/
