--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "validator": "^13.15.15"
   },
   "devDependencies": {
+    "@playwright/test": "^1.54.1",
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
