--- a/package.json
+++ b/package.json
@@ -12,7 +12,19 @@
   "dependencies": {
     "@calcom/embed-react": "^1.5.3",
     "@clerk/nextjs": "^6.27.1",
+    "@hookform/resolvers": "^5.2.1",
+    "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-navigation-menu": "^1.2.13",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-toast": "^1.2.14",
     "@sentry/nextjs": "^9.42.0",
     "@stripe/stripe-js": "^7.6.1",
     "class-variance-authority": "^0.7.1",
@@ -22,13 +34,17 @@
     "jsdom": "^26.1.0",
     "lucide-react": "^0.532.0",
     "next": "^15.4.4",
+    "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.61.1",
     "resend": "^4.7.0",
     "safe-compare": "^1.1.4",
+    "sonner": "^2.0.6",
     "stripe": "^18.3.0",
     "tailwind-merge": "^3.3.1",
-    "validator": "^13.15.15"
+    "validator": "^13.15.15",
+    "zod": "^4.0.13"
   },
   "devDependencies": {
     "@playwright/test": "^1.54.1",
