--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "@sentry/nextjs": "^9.42.0",
     "@stripe/stripe-js": "^7.6.1",
     "@tanstack/react-table": "^8.21.3",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.25.4",
+    "date-fns": "^4.1.0",
     "dompurify": "^3.2.6",
     "jsdom": "^26.1.0",
     "lucide-react": "^0.532.0",
@@ -43,6 +45,11 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.61.1",
+    "react-markdown": "^10.1.0",
+    "react-syntax-highlighter": "^15.6.1",
+    "rehype-raw": "^7.0.0",
+    "rehype-sanitize": "^6.0.0",
+    "remark-gfm": "^4.0.1",
     "resend": "^4.7.0",
     "safe-compare": "^1.1.4",
     "sonner": "^2.0.6",
