--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/validator": "^13.15.2",
     "autoprefixer": "^10.4.0",
     "playwright": "^1.54.1",
     "postcss": "^8.4.0",
