--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "convex": "^1.25.4",
     "date-fns": "^4.1.0",
     "dompurify": "^3.2.6",
+    "framer-motion": "^12.23.11",
     "jsdom": "^26.1.0",
     "lucide-react": "^0.532.0",
     "next": "^15.4.4",
