--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
     "@types/validator": "^13.15.2",
     "autoprefixer": "^10.4.0",
     "playwright": "^1.54.1",
+    "pixelmatch": "^6.0.0",
+    "pngjs": "^7.0.0",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.0.0"
